--- a/login.html
+++ b/login.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="stylesLogin.css">
-    <script defer src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js"></script>
+    <!-- Incluindo as bibliotecas do Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-auth.js"></script>
     <script defer src="script.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="image-container">
-            <img src="./img/imgLogin.jpg" alt="Imagem do Site">
+            <img src="./img/imgLogin.jpg" alt="Imagem do Site"> <!-- Imagem da tela de login -->
         </div>
         <div class="login-container">
             <h1>Login</h1>
