--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medicina Veterinaria</title>
+    <link rel="icon" href="./img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,10 +12,8 @@
         <nav>
             <ul>
                 <li><a href="#inicio">Início</a></li>
-                <li><a href="#uniformes">Uniformes</a></li>
+                <li><a href="#doenças">Doenças</a></li>
                 <li><a href="#quemsomos">Quem Somos</a></li>
-                <li><a href="#clientes">Clientes</a></li>
-                <li><a href="#contato">Entre em Contato</a></li>
             </ul>
         </nav>
     </header>
